--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,19 +1,124 @@
 html {
 	box-sizing: border-box;
-
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
 	box-sizing: inherit;
 }
 
 body {
-	background-color: yellow;
-	color: black;
-	font-size: 30px;
+	background-color: rgb(140, 185, 103);
+	text-align: center;
+	font-family: sans-serif;
 }
 
-.box {
-	display: flex;
-	transition: all .3s ease 0s;
+h1 {
+	margin-top: 30px;
+}
+label {
+	display: block;
+	margin-top: 50px;
+	margin-bottom: 20px;
+	font-size: 25px;
+}
+input {
+	margin-bottom: 20px;
+	width: 200px;
+	height: 30px;
+}
+
+button {
+	padding: 15px;
+	font-size: 20px;
+	border-radius: 15px;
+	border-color: red;
+	font-weight: 600;
+	cursor: pointer;
+	transition: all 0.3s ease 0s;
+}
+button:hover {
+	color: #fff;
+	background-color: black;
+	transform: translateY(3px);
+}
+
+.total {
+	margin-top: 35px;
+	font-size: 40px;
+	font-weight: 600;
+}
+.total-price {
+	color: red;
+}
+.words-number,
+.sentences-number,
+.names-number,
+.symbols-number {
+	margin-bottom: 35px;
+	font-size: 25px;
+}
+.number {
+	margin-left: 15px;
+}
+
+.words-number {
+	margin-top: 30px;
+}
+.hidden {
+	display: none;
+}
+
+#text-input {
+	min-width: 700px;
+	min-height: 500px;
+	resize: vertical;
+	outline: none;
+	border: none;
+	border-radius: 5px;
+	padding: 15px;
+}
+
+.modal {
+	position: absolute;
+	top: 60%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 40%;
+	background-color: #fff;
+	padding: 30px;
+	border-radius: 10px;
+	box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+	z-index: 2;
+	text-align: start;
+}
+
+.overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 1;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 1;
+	cursor: pointer;
+}
+
+.close-modal {
+	position: absolute;
+	right: 30px;
+	font-size: 40px;
+	font-weight: 500;
+	padding: 3px;
+}
+.calculate-all {
+	display: block;
+	margin: 0 auto;
+	margin-top: 20px;
+}
+
+.number {
+	font-size: 30px;
 }
